<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">1 2 Quit</string>
    <string name="action_settings">Instellingen</string>
    <string name="developer_settings">Ontwikkelaar instellingen</string>
    <string name="title_activity_setup_brand_amount">Rook gewoontes</string>
    <string name="smokeAmount">Hoeveel rookt u?</string>
    <string name="sigaretten">sigaretten</string>
    <string name="shag">shag</string>
    <string name="setupBrand">Merk</string>
    <string name="setupDayAmount">Aantal per dag</string>
    <string name="setupPackAmount">Aantal per pakje</string>
    <string name="setupPrice">Prijs van pakje</string>
    <string name="addSmoke">Staat uw merk er niet tussen? Druk hier om hem zelf toe te voegen!</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer dicht</string>

    <string-array name="brand_array">
        <item>Chesterfield</item>
        <item>Camel</item>
    </string-array>
    <string-array name="nav_array">
        <item>Achievements</item>
        <item>Voortgang</item>
        <item>Product</item>
        <item>Gezondheid</item>
        <item>Instellingen</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/nav_achievements</item>
        <item>@drawable/nav_progress</item>
        <item>@drawable/nav_product</item>
        <item>@drawable/nav_health</item>
        <item>@drawable/nav_settings</item>
    </array>
    //quit date scherm                            <string name="quitDateTitle">Stopdatum</string>
    <string name="quitDateNext">Volgende</string>
    <string name="title_activity_setup_quit_date">SetupQuitDate</string>
    //health progress scherm                    <string name="title_activity_health_progress">Gezondheid</string>
    <string name="title_activity_health_progress_algemeen">Gezondheid algemeen</string>
    <string name="title_activity_health_progressBar1">Lagere koolmonoxide- en zuursofniveaus</string>
    <string name="title_activity_health_progressBar2">Minder risico op plotse hartdood</string>
    <string name="title_activity_health_progressBar3">Smaak- en geurzin teruggekregen</string>
    <string name="title_activity_health_progressBar4">Ademhaling terug naar normaal</string>
    <string name="title_activity_health_progressBar5">Fysieke onafhankelijkheid van nicotine</string>
    <string name="title_activity_health_progressBar6">Verbeterde bloedsomloop en huidhydratatie en verdwijnen van vroegtijdige rimpels</string>
    <string name="title_activity_health_progressBar7">Fysieke conditie verbeterd</string>
    <string name="title_activity_health_progressBar8">Minder risico op dood door hartziekten</string>
    <string name="title_activity_health_progressBar9">Minder risico om longkanker te ontwikkelen</string>
    <string name="health_procent1">0%</string>
    <string name="health_procent2">0%</string>
    <string name="health_procent3">0%</string>
    <string name="health_procent4">0%</string>
    <string name="health_procent5">0%</string>
    <string name="health_procent6">0%</string>
    <string name="health_procent7">0%</string>
    <string name="health_procent8">0%</string>
    <string name="health_procent9">0%</string>
    <string name="health_timer1">0</string>
    <string name="health_timer2">0</string>
    <string name="health_timer3">0</string>
    <string name="health_timer4">0</string>
    <string name="health_timer5">0</string>
    <string name="health_timer6">0</string>
    <string name="health_timer7">0</string>
    <string name="health_timer8">0</string>
    <string name="health_timer9">0</string>
    //Voortgang scherm                        <string name="title_activity_progress">Voortgang</string>
    <string name="sparedMoney">€0,00</string>
    <string name="dayProgress">0 Dagen</string>
    <string name="sparedDays">0 dagen extra te leven</string>
    //Setup                        <string name="title_activity_setup">Instellingen</string>
    <string name="setup_complete">Voltooien</string>
    // ChooseProduct                            <string name="title_activity_choose_product">ChooseProduct</string>
    <string name="title_activity_choose_product_title_product">Product</string>
    <string name="title_activity_choose_product_product_bol">Zoek een product uit de bol.com catalogus</string>
    <string name="title_activity_choose_product_product_hint">Product naam...</string>
    <string name="title_activity_choose_product_product_button_search">Zoek</string>
    <string name="title_activity_choose_product_product">Zoek een product</string>
    //Home                            <string name="title_activity_home">Home</string>
    //Achievements                    <string name="title_fragment_achievements">Achievements</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_product">Product</string>
    <string name="achievement_first_steps">Eerste stapjes</string>
    <string name="achievement_first_steps_content">Breng een dag door zonder te roken.</string>
    <string name="achievement_deep_breath">Even diep ademhalen</string>
    <string name="achievement_deep_breath_content">Verbeter de gezondheid van je longen met 10%.</string>
    <string name="achievement_kaching">Ka-ching!</string>
    <string name="achievement_kaching_content">Bespaar 20 euro door niet te roken.</string>
    <string name="achievement_money">Geld op de bank</string>
    <string name="achievement_money_content">Bespaar 100 euro door niet te roken.</string>
    <string name="achievement_extra_life">Extra leven</string>
    <string name="achievement_extra_life_content">Verdien 10 dagen extra te leven.</string>
    <string name="achievement_invincible">Onsterfelijk</string>
    <string name="achievement_invincible_content">Verdien 50 dagen extra te leven.</string>
    <string name="achievement_buy_product">Voor wat hoort wat</string>
    <string name="achievement_buy_product_content">Koop een product ter waarde van €50.</string>
    <string name="achievement_worth_it">Dat was het waard</string>
    <string name="achievement_worth_it_content">Koop een product ter waarde van €200.</string>
    <string name="achievement_one_down">Dat is één</string>
    <string name="achievement_one_down_content">Bespaar 1 pakje sigaretten/shag</string>
    <string name="achievement_easy">Is dit nou zo moeilijk?</string>
    <string name="achievement_easy_content">Rook 10 sigaretten niet.</string>
    <string name="title_activity_set_prefered_fragment">SetPreferedFragment</string>
    <string name="level">level</string>
    // Product choose                <string name="product_result">Geen resultaat</string>
    <string name="title_activity_product_detail">Product Details</string>
    <string name="product_no_results">Er zijn geen producten gevonden voor de gebruikte zoekterm. Probeer uw zoekopdracht aan te passen.</string>
    //product fragment            <string name="product_product_price">€0,00</string>
    <string name="product_saved_amount">€0,00</string>
    <string name="product_product_percentage">100%</string>
    <string name="product_saved_percentage">0%</string>
    <string name="product_pay">Betaal nu!</string>
    <string name="product_complete">Voltooid!</string>
    <string name="product_days_left">Nog 100 dagen sparen!</string>
//progress            <string name="quitDate">U stopte met roken:</string>
    <string name="dagenzonderroken">Dagen zonder roken:</string>
    <string name="nietgerooktesigaretten">Niet gerookte sigaretten:</string>
    <string name="bespaardegeld">Bepaard geld:</string>
    <string name="extradagen">Extra dagen te leven:</string>
    <string name="title_activity_settings">Instellingen</string>
    <!-- user settings string -->
    <string name="pref_user_settings">Gebruikers instellingen</string>
    <string name="pref_quit_date">Kies uw stopdatum</string>
    <string name="pref_quit_date_summary">Op welke datum bent u gestopt?</string>
    <string name="pref_quit_time">Kies uw stoptijd</string>
    <string name="pref_quit_time_summary">Hoelaat bent u gestopt?</string>
    <string name="pref_brand_summary">Welk merk sigaretten of shag rookt u?</string>
    <string name="pref_day_amount_summary">Hoeveel sigaretten rookt u per dag?</string>
    <string name="pref_pack_amount_summary">Hoeveel sigaretten haalt u uit een pakje?</string>
    <string name="pref_app_settings">Applicatie instellingen</string>
    <string name="prefered_fragment">Gewenste startscherm</string>
    <string name="pref_frag_summary">Kies het scherm dat u standaard wil zien als u de app opnieuw opstart.</string>
    <string name="title_activity_choose_product_host">Kies een product</string>
    <string name="pref_product">Spaar product</string>
    <string name="pref_product_summary">Kies een nieuw product om voor te sparen.</string>
    <string name="setup_per_pak">sigaretten per pak?</string>
    <string name="pref_reset_spent">Reset uw uitgegeven bedrag</string>
    <string name="pref_reset_spent_summary">Reset het bedrag dat u heeft uitgegeven aan producten naar €0.Uw uitgegeven bedrag is op dit moment</string>
    <string name="no_zero">Het ingevulde getal mag geen 0 zijn, vul alstublief een ander getal in.</string>
    <string name="error">Foutje</string>
    <string name="try_again">Probeer opnieuw</string>
    <string name="pref_shag_or_sig">Shag of sigaretten?</string>
    <string name="pref_shag_or_sig_summary">Rookte u shag of sigaretten?</string>
    <string name="pref_price">Prijs per pakje</string>
    <string name="pref_price_summary">Wat is de prijs van uw pakje shag of sigaretten?</string>
    <!-- alert dialog newProduct -->
    <string name="new_product_dialog">Wilt u voor een nieuw product sparen</string>
    <string name="bought_product">Heeft u het product waar u voor spaart gekocht?</string>
    <string name="yes">Ja</string>
    <string name="no">Nee</string>
    <!-- alert dialog reset spent amount -->
    <string name="alert_reset_spent">Als u uw stopdatum wijzigt zal de hoeveelheid geld dat u heeft uitgegeven aan producten resetten en dus €0 zijn. Weet u zeker dat u uw stopdatum wilt wijzigen? </string>
    <string name="alert_reset_spent_second">Het resetten van uw uitgegeven bedrag is onomkeerbaar. Weet u zeker dat u toch door wilt gaan?</string>
    <string name="be_alert">Let op!</string>

    <!-- add smoke activity strings -->
    <string name="title_activity_add_smoke">Nieuw merk</string>
    <string name="smoke_details">Vul de gegevens van uw merk in</string>
    <string name="brand_name">Merknaam</string>
    <string name="add_brand">Voeg merk toe</string>
    <string name="gram">Gram per pakje</string>

    <!-- social media text -->


</resources>
