<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.amaze.quit.app.Achievements"
    android:orientation="vertical">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_fragment_achievements"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40dp"
        android:layout_marginTop="31dp"
        android:layout_gravity="center_horizontal" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/achievement_first_steps"
                android:id="@+id/tvAchievement_first_steps"
                android:layout_marginTop="34dp"
                android:paddingLeft="40dp"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/achievement_first_steps_content"
                android:id="@+id/tvAchievement_first_steps_content"
                android:paddingTop="2dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:drawableRight="@drawable/check_mark_green"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/achievement_deep_breath"
                android:id="@+id/tvAchievement_deep_breath"
                android:layout_marginTop="10dp"
                android:paddingLeft="40dp"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/achievement_deep_breath_content"
                android:id="@+id/tvAchievement_deep_breath_content"
                android:paddingTop="2dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:drawableRight="@drawable/check_mark_green"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/achievement_kaching"
                android:id="@+id/tvAchievement_kaching"
                android:layout_marginTop="10dp"
                android:paddingLeft="40dp"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/achievement_kaching_content"
                android:id="@+id/tvAchievement_kaching_content"
                android:paddingTop="2dp"
                android:paddingLeft="40dp"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/achievement_money"
                android:id="@+id/tvAchievement_money"
                android:layout_marginTop="10dp"
                android:paddingLeft="40dp"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/achievement_money_content"
                android:id="@+id/tvAchievement_money_content"
                android:paddingTop="2dp"
                android:paddingLeft="40dp"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/achievement_extra_life"
                android:id="@+id/tvAchievement_extra_life"
                android:layout_marginTop="10dp"
                android:paddingLeft="40dp"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/achievement_extra_life_content"
                android:id="@+id/tvAchievement_extra_life_content"
                android:paddingTop="2dp"
                android:paddingLeft="40dp"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/achievement_invincible"
                android:id="@+id/tvAchievement_invincible"
                android:layout_marginTop="10dp"
                android:paddingLeft="40dp"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/achievement_invincible_content"
                android:id="@+id/tvAchievement_invincible_content"
                android:paddingTop="2dp"
                android:paddingLeft="40dp"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/achievement_buy_product"
                android:id="@+id/tvAchievement_buy_product"
                android:layout_marginTop="10dp"
                android:paddingLeft="40dp"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/achievement_buy_product_content"
                android:id="@+id/tvAchievement_buy_product_content"
                android:paddingTop="2dp"
                android:paddingLeft="40dp"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/achievement_one_down"
                android:id="@+id/tvAchievement_one_down"
                android:layout_marginTop="10dp"
                android:paddingLeft="40dp"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/achievement_one_down_content"
                android:id="@+id/tvAchievement_one_down_content"
                android:paddingTop="2dp"
                android:paddingLeft="40dp"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/achievement_easy"
                android:id="@+id/tvAchievement_easy"
                android:layout_marginTop="10dp"
                android:paddingLeft="40dp"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/achievement_easy_content"
                android:id="@+id/tvAchievement_easy_content"
                android:paddingTop="2dp"
                android:paddingLeft="40dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
