<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.amaze.quit.app.Progress">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_progress"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textSize="40sp"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tvSparedMoney"
        android:text="@string/sparedMoney"
        android:layout_marginTop="60dp"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tvDayProgress"
        android:text="@string/dayProgress"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:textSize="40sp"/>


    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:id="@+id/tvLevel"
    android:text="@string/level"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="60dp"
    android:textSize="40sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/tvLevelDesc"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tvSparedDays"
        android:text="@string/sparedDays"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:textSize="15sp"/>
</LinearLayout>
